--- a/src/main.css
+++ b/src/main.css
@@ -351,7 +351,6 @@ p {
     border: none;
 }
 
-
 .etymoBtn2:hover::after {
     opacity: 1;
     content: attr(alt);
@@ -368,8 +367,6 @@ p {
     border-radius: 4px;
     border-color: #999;
 }
-
-
 
 .etymoBtn2 {
     font-size: large;
@@ -401,7 +398,6 @@ p {
 .btn {
     text-align: center;
     flex: 1;
-    min-width: 200px;
     box-sizing: border-box;
     background: #6e6e6e;
     color: rgb(252, 212, 159);
@@ -415,6 +411,31 @@ p {
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.3s;
+}
+
+.validate {
+    margin: 40px;
+    max-width: 130px;
+    font-weight:800;
+    height: 50px;
+    border-radius: 20px;
+    border: 2px solid #ffffff;
+    background: #3c6d2f;
+    color: rgb(255, 255, 255);
+    float: right;
+}
+
+.frozen {
+    border: none;
+    background: #b3b3b3;
+    color: #e2e2e2;
+    cursor:default;
+    pointer-events: none;
+}
+
+.selected {
+    background: rgb(233, 224, 200);
+    color: #111;
 }
 
 .btn.correct {
