--- a/src/main.css
+++ b/src/main.css
@@ -133,7 +133,9 @@ strong {
 p {
     font-family: sans-serif;
 }
-
+li {
+    padding: 4px;
+}
 .gameHeader {
     padding: 20px;
     height: 80px;
@@ -145,8 +147,8 @@ p {
 .news {
     background-color: white;
     border-radius: 10px;
-    max-width: 320px;
-    min-width: 200px;
+    max-width: 450px;
+    min-width: 300px;
     margin: 20px;
     padding: 10px;
 
@@ -553,7 +555,6 @@ p {
 
 .modal {
     text-align: center;
-    display: none;
     position: fixed;
     z-index: 1;
     padding-top: 40px;
