update css progress-bar

--- a/src/main.css
+++ b/src/main.css
@@ -290,7 +290,7 @@ li {
 .progress-container {
     width: 90%;
     max-width: 800px;
-    background-color: #272727;
+    background-color: #424242;
     border-radius: 15px;
     padding: 2px;
     margin: 15px;
@@ -298,7 +298,7 @@ li {
 
 .progress-bar {
     width: 0%;
-    height: 25px;
+    height: 18px;
     background-color: #f5d375;
     border-radius: 12px;
     transition: width 0.3s ease-in-out;
@@ -386,7 +386,6 @@ li {
 }
 
 .quiz {
-    transition: 0.3s;
     margin: auto;
     text-align: center;
     flex-direction: column;
@@ -394,25 +393,44 @@ li {
     max-width: 1000px;
     min-height: 500px;
     /*overflow: scroll;*/
+
 }
 
+.initquiz{
+    transition: all 0.3s;
+}
+
+.transquiz {
+    transition: all 0.3s;
+    transform:  translateX(-50px);
+    opacity: 0;
+}
+
+.transquiz2 {
+    transform:  translateX(50px);
+    opacity: 0;
+}
 
 .btn {
     text-align: center;
     flex: 1;
     box-sizing: border-box;
-    background: #6e6e6e;
-    color: rgb(252, 212, 159);
+    background: transparent;
+    color: rgb(77, 71, 63);
     font-size: large;
     font-weight: 500;
     width: 40%;
     max-width: 180px;
-    border: 2px solid #222;
+    border: 1px solid #575757;
+    border-bottom: 3px solid #575757;
     padding: 10px;
     margin: 7px;
-    border-radius: 8px;
+    border-radius: 15px;
     cursor: pointer;
     transition: all 0.3s;
+}
+.btn:hover{
+    transform:  translateY(-4px);
 }
 
 .themebtn {
@@ -491,9 +509,11 @@ li {
 }
 
 .selected {
-    background: rgb(233, 224, 200);
+    background: ghostwhite;
     color: #111;
+    transform:  translateY(-4px);
 }
+
 
 .btn.correct {
     border: none;
@@ -506,8 +526,12 @@ li {
 }
 
 .btn:hover:not([disabled]) {
-    background: ghostwhite;
+    background: rgb(233, 224, 200);
     color: #111;
+}
+
+.selected:hover {
+    background: rgb(255, 255, 255);
 }
 
 .btn:disabled {
