--- a/src/main.css
+++ b/src/main.css
@@ -58,8 +58,8 @@
 }
 
 @font-face {
-    font-family: 'Helvetica';
-    src: url('./font/helvetica-rounded.otf') format('otf');
+    font-family: 'Lato';
+    src: url('./font/Lato-Regular.ttf') format('truetype');
 }
 
 a {
@@ -109,6 +109,17 @@ input {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
         rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+.shield{
+        transform: translateY(0);
+        opacity: 1;
+        transition: 0.3s;
+}
+
+.shieldHeartsBroken{
+    transform: translateY(-20px);
+    opacity: 0;
+}
+
 .searchBar{
     width: 200px; margin: 50px;
     margin: auto;
@@ -149,15 +160,15 @@ header {
 footer {
     display: flex;
     justify-content: center;
-    /* Horizontal centering */
     align-items: center;
     background: #363636;
-    width: 100vw;
     height: 170px;
     max-width: 100%;
     padding: 20px;
     padding-bottom: 50px;
     bottom: 0px;
+    margin: 0;
+    position: relative;
 }
 
 .footer-content {
@@ -224,7 +235,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("./images/ogham.jpg");
+    background-image: url("./images/koekkoek.jpg");
     height: 200px;
     background-size: cover;
 }
@@ -301,9 +312,7 @@ li {
 }
 
 .summary {
-    font-family: Helvetica;
-    font-size: small;
-    font-weight: bold;
+    font-family: "Lato", "Calibri";
     color: black;
     display: flex;
     flex-direction: row;
@@ -312,9 +321,24 @@ li {
     margin-right: 50px;
 }
 
-.summary-btn:hover {
-    background-color: darkolivegreen;
-    color: white;
+
+
+.summary-btn::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.3s ease-out;
+}
+
+.summary-btn:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 .summary-btn {
@@ -324,6 +348,9 @@ li {
     padding-top: 0px;
     border-radius: 5px;
     transition-duration: 0.3s;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .new-noon {
@@ -439,20 +466,21 @@ li {
     transition: 0.3s;
 }
 
-/*
 .notice {
-    display: none;
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.noticeContent {
+    text-align:justify;
+    width: 65%;
+}
 
 .gamePage {
     background-image: url("./images/background_game_02.jpg");
-    background-size: contain;
-    background-position: 50% 0px;
+    background-size: cover;
+    background-position: 50% -100px;
     position: relative;
     width: 100vw;
 }
