--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 /*Functional Styling for tooltip on mobile device*/
-@media (max-width: 600px) {
+@media (max-width: 780px) {
     .gameHeader {
         background-color: rgb(54, 54, 54);
         display: none;
@@ -50,6 +50,36 @@
     h2 {
         font-size: 125% !important;
     }
+
+    header {
+        padding-left: 20px !important;
+        line-height: 25px !important;
+    }
+
+    .summary {
+        display: none !important;
+    }
+
+    .burger-menu {
+        display: flex !important;
+        ;
+        margin-left: auto;
+        z-index: 1000;
+    }
+
+    .burger-list {
+        flex-direction: column;
+        background-color: white;
+    }
+
+    footer {
+        height: 300px !important;
+    }
+
+    .footer-content {
+        flex-direction: column !important;
+
+    }
 }
 
 @font-face {
@@ -79,7 +109,7 @@ h1 {
 h2 {
     margin: 0px;
     font-family: 'Trajan';
-    font-size: 140%;
+    font-size: 170%;
     padding: 5px;
     color: rgb(67, 133, 61);
 }
@@ -109,22 +139,27 @@ input {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
         rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
-.shield{
-        transform: translateY(0);
-        opacity: 1;
-        transition: 0.3s;
+
+.shield {
+    transform: translateY(0);
+    padding-left: 5px;
+    top: 15px;
+    opacity: 1;
+    transition: 0.3s;
 }
 
-.shieldHeartsBroken{
+.shieldHeartsBroken {
     transform: translateY(-20px);
     opacity: 0;
 }
 
-.searchBar{
-    width: 200px; margin: 50px;
+.searchBar {
+    width: 200px;
+    margin: 50px;
     margin: auto;
 }
-.searchResult{
+
+.searchResult {
     box-shadow: 0px 1px 2px #CCC;
     background-color: white;
     position: absolute;
@@ -143,7 +178,7 @@ body {
 }
 
 header {
-    line-height: 70px;
+    line-height: 75px;
     box-sizing: border-box;
     display: flex;
     width: 100vw;
@@ -151,7 +186,7 @@ header {
     position: relative;
     top: 0;
     padding: 20px;
-    padding-left: 80px;
+    padding-left: 30px;
     height: 110px;
     margin: 0;
     max-width: 100%;
@@ -311,6 +346,20 @@ li {
     padding: 15px;
 }
 
+.burger-menu {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.burger-icon {
+    font-size: 30px;
+    cursor: pointer;
+    margin-right: 50px;
+    margin-top: 10px;
+}
+
 .summary {
     font-family: "Lato", "Calibri";
     color: black;
@@ -318,10 +367,8 @@ li {
     flex-direction: row;
     padding: 0px;
     margin-left: auto;
-    margin-right: 50px;
+    margin-right: 20px;
 }
-
-
 
 .summary-btn::after {
     content: '';
@@ -344,7 +391,7 @@ li {
 .summary-btn {
     padding: 7px;
     margin: 5px;
-    margin-right: 20px;
+
     padding-top: 0px;
     border-radius: 5px;
     transition-duration: 0.3s;
@@ -403,7 +450,6 @@ li {
 
 .etymoForm {
     display: flex;
-    margin: auto;
     margin-bottom: 5px;
     font-family: 'Trajan';
     text-align: left;
@@ -417,7 +463,7 @@ li {
 #pres {
     display: flex;
     align-items: flex-end;
-    padding-bottom: 13px;
+    padding-bottom: 7px;
     padding-right: 15px;
 }
 
@@ -441,7 +487,7 @@ li {
     font-size: x-large;
     font-weight: bold;
     position: absolute;
-    bottom: 70px;
+    bottom: 50px;
     width: 200px;
     left: -50px;
     /*margin-left: -5px;*/
@@ -458,7 +504,7 @@ li {
     background: transparent;
     color: rgb(46, 97, 54);
     font-weight: 700;
-    padding: 65px 5px 10px 5px;
+    padding: 55px 5px 10px 5px;
     margin: 5px;
     text-align: center;
     cursor: default;
@@ -473,7 +519,7 @@ li {
 }
 
 .noticeContent {
-    text-align:justify;
+    text-align: justify;
     width: 65%;
 }
 
@@ -575,7 +621,9 @@ li {
 .weapons {
     background-image: url("./images/weapons_ico.jpg");
 }
-
+.family {
+    background-image: url("./images/family.jpg");
+}
 .themebtn:hover {
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
 }
