feat (css) add trajan font as class

--- a/src/main.css
+++ b/src/main.css
@@ -104,6 +104,10 @@ li {
     font-family: sans-serif;
 }
 
+.trajan {
+    font-family: 'Trajan';
+}
+
 h1 {
     margin: 0px;
     font-family: 'Trajan';
